--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,45 +1,91 @@
+
 * {
-    border: none;
     font-family: "Firacode Nerd Font";
     font-size: 14px;
     min-height: 0;
 }
 
+/* === WAYBAR CONTAINER === */
 window#waybar {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.2);
     color: #ffffff;
     transition-property: background-color;
-    transition-duration: .5s;
+    transition-duration: 0.5s;
 }
 
 window#waybar.hidden {
     opacity: 0.2;
 }
 
-
 window#waybar.empty {
     background-color: transparent;
 }
 
+/* === BUTTON STYLES === */
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
+    box-shadow: inset 0 -3px transparent; /* Prevent text offset */
     border: none;
-    border-radius: .5px;
+    border-radius: 3px;
+    background: rgba(0, 0, 0, 0.2);
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -3px #ffaaff;
+}
+
+/* === WORKSPACES === */
+#workspaces {
+  padding: 0 2px;
+  background: rgba(22, 25, 37, 0.8);
+  color: rgb(224, 74, 247);
+  border-radius: 3px;
+  border-bottom: 2px solid transparent;
 }
 
 #workspaces button {
-    color: rgb(255, 85, 0);
-    padding: 0 5px;
+    color: rgb(216, 34, 242);
+    font-size: 30px;
     background-color: transparent;
+    padding: 0 5px;
+    border-radius: 4px;
 }
+
+#workspaces button.active {
+    background: transparent;
+    color: #dfdfdf; 
+    border-bottom: 2px solid #51afef;
+}
+
+#workspaces button.focused {
+    background: transparent;
+    color: #dfdfdf; 
+    border-bottom: 2px solid #51afef;
+}
+
+#workspaces button.visible {
+    background: rgba(123, 50, 243, 0.8);
+    color: #F2A8FC;
+    border-bottom: 2px solid transparent;
+}
+
+#workspaces button.urgent {
+    background: red;
+    color: #889fa7;
+    border-bottom: 2px solid transparent;
+}
+
+#workspaces button.empty {
+    color: #F2A8FC;
+    border-bottom: 2px solid transparent;
+}
+
+#workspaces button.hidden {
+    background: green;
+    color: #889fa7;
+    border-bottom: 2px solid transparent;
+}
+
 
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
@@ -50,152 +96,112 @@ button:hover {
     box-shadow: inset 0 -3px #ffffff;
 }
 
-#custom-launcher,
-#idle_inhibitor,
-#cava,
-#mpris,
-#clock,
-#cpu,
-#memory,
-#network,
+/* === MODULE CONTAINER STYLES === */
+#user,
 #custom-updates,
+#mpris,
+#hyprland-workspaces,
+#network,
+#pulseaudio-slider,
+#clock,
 #custom-exit,
-#workspaces,
+#idle-inhibitor,
+#window,
+
 #window {
-    color: white;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    background-color: rgba(22, 25, 37, 0.8);
-    border-radius: 16px;
     padding: 0.5rem 1rem;
-    margin: 3px 0px 3px 0px;
+    margin: 3px 0;
     box-shadow: rgba(0, 0, 0, 0.116) 2px 2px 5px 2px;
+    background: rgba(22, 25, 37, 0.8);
+    border-radius: 3px;
 }
 
-
-#custom-launcher {
-    font-size: 19px;
-    color: rgb(0, 128, 255);
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-right: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-/* HARDWARE */
-
-#cpu {
-    color: rgb(0, 255, 132);
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    margin-right: 0px;
-    padding-right: 5px;
-} 
-
-#memory {
-    color: rgb(245, 189, 6);
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    padding-left: 5px;
-    padding-right: 1rem;
-}
-
+/* === INDIVIDUAL MODULES === */
 #custom-updates {
-    color: #ff91a4;
+    color: rgb(224, 74, 247);
     margin-left: 5px;
 }
 
 #network {
-    color: rgb(4, 255, 255);
-    padding-top: 0px;
-    padding-bottom: 0px;
+    color: rgb(224, 74, 247);
+    padding: 0;
     padding-left: 10px;
-    margin-left: 10px;
-    margin-right: 5px;
+    margin: 0 5px 0 10px;
 }
 
-#wireplumber {
-    color: rgb(166, 124, 190);
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    background-color: rgba(22, 25, 37, 0.8);
-    border-radius: 12px 0px 0px 12px;
-    border-radius: 16px;
-    margin: 3px 0px 3px 0px;
-    padding-right: 5px;
-    padding-left: 5px;
-} 
-
 #clock {
-    color: rgb(219, 106, 91);
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-right: 5px;
-    margin-left: 5px;
+    color: rgb(224, 74, 247);
+    padding: 0 5px;
+    margin: 0 5px;
 }
 
 #custom-exit {
-    color: rgb(182, 49, 71);
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 10px;
-    margin-left: 10px;
+    color: rgb(224, 74, 247);
+    margin-left: 5px;
     margin-right: 5px;
-}
-
-#workspaces {
-    color: rgb(255, 85, 0);
-    background: rgba(22, 25, 37, 0.8);
-    margin-left: 15px;
-    margin-right: 10px;
-    border-radius: 12px 0px 0px 12px;
-    padding-left: 6px;
-    padding-right: 10px;
 }
 
 #window {
     color: white;
-    background: rgba(22, 25, 37, 0.8);
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #e04af7 0%, #AF88EE 100%);
+    padding: 0 12px 0 12px;
     margin-right: 15px;
-    border-radius: 0px 12px 12px 0px;
-    padding-right: 12px;
-    padding-left: 8px;
-}
-
-#cava {
-    color: rgb(166, 124, 190);
-    background: rgba(22, 25, 37, 0.8);
-    margin-right: 15px;
-    border-radius: 0px 12px 12px 0px;
-    padding-right: 12px;
-    padding-left: 8px;
-    margin-top: 2px;
-    margin-bottom: 1px;
-}
-
-#mpris { 
-    color: rgb(255, 85, 0);
-    background: rgba(22, 25, 37, 0.8);
     margin-left: 15px;
-    margin-right: 10px;
-    border-radius: 12px 0px 0px 12px;
-    padding-left: 6px;
-    padding-right: 10px;
-    margin-top: 2px;
-    margin-bottom: 1px;
+    background: rgba(22, 25, 37, 0.8);
 }
 
-#idle_inhibitor {
-    color: rgb(182, 49, 71);
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 10px;
-    margin-left: 10px;
-    margin-right: 5px;
+#mpris {
+    color: rgb(224, 74, 247);
+    background: rgba(22, 25, 37, 0.8);
+    margin: 2px 15px 1px 15px;
+    padding: 0 10px 0 10px;
+}
 
+#mpris.playing {
+    color: white;
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #e04af7 0%, #AF88EE 100%);
+
+}
+
+#idle_inhibitor.deactivated {
+    color: rgb(224, 74, 247);
+    padding: 0 20px 0 15px;
+    background: rgba(22, 25, 37, 0.8);
+}
+
+#idle_inhibitor.activated {
+    color: white;
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #e04af7 0%, #AF88EE 100%);
+    padding: 0 20px 0 15px;
+}
+
+#user {
+    color: #e04af7;
+    margin-left: 5px;
+}
+
+/* === AUDIO SLIDER === */
+#pulseaudio-slider slider {
+    min-height: 0;
+    min-width: 0;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+
+#pulseaudio-slider trough {
+    min-height: 10px;
+    min-width: 80px;
+    border-radius: 5px;
+    background-color: black;
+}
+
+#pulseaudio-slider highlight {
+    min-width: 10px;
+    border-radius: 5px;
+    background-color: rgb(224, 74, 247);
 }
